# project_synapse

./: .gitignore  CMakeLists.txt  README.md  uds_gateway  uds_gateway.cpp  veh_client.json  veh_server.json
bindings/: CMakeLists.txt  synapse_vsomeip.cpp
client/: CMakeLists.txt  veh_cli.cpp  veh_control_client.cpp  veh_gui.py  veh_status_subscriber.cpp  veh_unified_client.cpp
common/: CMakeLists.txt  config.hpp  veh_can.hpp  veh_control_service.hpp  veh_logger.hpp  veh_status_service.hpp  veh_types.hpp
common/include/: common_defs.h
common/src/: logger.cpp
gui_client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  vsclientthread.cpp  vsclientthread.h
include/: veh_aeb_server.hpp  veh_autopark_server.hpp  veh_common.hpp  veh_drive_server.hpp  veh_server_common.hpp
resources/: veh_client.json  veh_unified_client.json  veh_unified_server.json
server/: CMakeLists.txt  veh_can_tx.cpp  veh_control_server.cpp  veh_status_publisher.cpp  veh_unified_server.cpp
server/config/: veh_server.json
server/include/: utils.hpp  veh_auth_server.hpp  veh_can.hpp  veh_fault_server.hpp  veh_fcw_server.hpp  veh_tof_server.hpp
server/src/: veh_aeb_server.cpp  veh_autopark_server.cpp  veh_can.cpp  veh_fault_server.cpp  veh_fcw_server.cpp  veh_tof_server.cpp
src/: veh_auth_server.cpp  veh_drive_server.cpp  veh_server_main.cpp
